--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -164,17 +164,35 @@ input[type="checkbox"]#gnbcheck:checked ~ #gnbbtn {
 }
 
 .modal a.close-modal.close_custom{
-	position: inherit;
+    position: inherit;
     display: inline-block;
-    width: 30px;
-    height: 24px;
+    width: 50px;
+    height: 30px;
     background-image: none;
-    color: black;
+    /* padding-bottom: 7px; */
+    color: white;
     text-indent: 0;
-    margin-left: 10px;
-    line-height: 32px;
+    text-align: center;
+    margin: 0;
+    line-height: 19px;
 }
 
+.delete-modal{
+    width: 50px;
+    height: 30px;
+    left: 30px;
+    background: var(--main-color);
+    border: none;
+    border-radius: 5px;
+    bottom: 30px;
+    display: inline-block;
+    color: white;
+    font-family: 'OTWelcomeRa';
+    font-size: 16px;
+    padding-top: 10px;
+    margin-right: 20px;
+    transition: .1s Ease-in all;
+}
 
 @media all and ( max-width: 790px ) {
   #mobile-close-btn {
