다운로드 시간, 관리자 css, 업로드페이지js수정

--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -39,3 +39,23 @@
 .delete_title {
 	font-size : 16px;
 }
+.modal-admin {
+   margin-top : 35px;
+}
+
+.delete_title {
+   font-size : 16px;
+}
+
+.passwd-box {
+   margin : 20px auto;
+}
+
+.id-input, .passwd-input {
+   border: none;
+    border-bottom: 1px solid gray;
+}
+
+.passwd-input {
+   width: 36%;
+}
