--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -6,12 +6,9 @@
     background-color: #F8F5FF;
     resize: none;
     border-radius: 30px;
-    text-align: center;
     vertical-align: middle;
     padding: 20px;
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 365px;
+    font-size: 14px;
     overflow-y: hidden;
 }
 .input-container{
@@ -29,6 +26,13 @@
 	min-width: 220px;
     width: calc(40% - 10px);
     flex-grow: 0;
+    position: relative;
+}
+
+.textarea_span{
+	position: absolute;
+	top: 50%;
+	right: 50%;
 }
 
 .filearea {
