--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -133,11 +133,8 @@ table {
 }
 td {
 	padding:5px;
-	border-right: 1px solid #595a85;
 }
-td:first-child{
-	border-left: 1px solid #595a85;
-}
+
 .pie_number {
 	font-size: 25px;
 	color: #42cef5;
@@ -159,7 +156,7 @@ div.google-visualization-tooltip > ul > li > span{
 	height: 35px;
     line-height: 25px;
     padding-bottom: 10px;
-    border-bottom: 1px solid;
+    
 }
 
 .admin_item{
@@ -172,7 +169,7 @@ div.google-visualization-tooltip > ul > li > span{
 	display: flex;
     width: 100%;
     height: 100%;
-    line-height: 47px;
+    line-height: 20px;
     color: #42cef5;
 }
 
@@ -189,4 +186,12 @@ div.google-visualization-tooltip > ul > li > span{
 }
 h1 {
 	margin-bottom: 12px;
+}
+.admin_board_box {
+	margin-left: 5px;
+}
+th {
+	padding-top: 10px;
+	padding-left: 5px;
+	padding-bottom: 8px;
 }
